--- a/src/themes/accelerator/components/HtmlHead.astro
+++ b/src/themes/accelerator/components/HtmlHead.astro
@@ -14,7 +14,7 @@ const { frontmatter } = Astro.props;
 const imageSrc = frontmatter.bannerImage?.src ?? OPEN_GRAPH.image.src;
 const imageAlt = frontmatter.bannerImage?.alt ?? OPEN_GRAPH.image.alt;
 const canonicalImageSrc = new URL(imageSrc, Astro.site);
-const canonicalURL =  addSlashToUrl(new URL(Astro.url.pathname, Astro.site));
+const canonicalURL =  addSlashToUrl(new URL(Astro.url.pathname, Astro.site + SITE.subfolder));
 ---
 <head>
   <meta charset="utf-8" />
@@ -24,13 +24,13 @@ const canonicalURL =  addSlashToUrl(new URL(Astro.url.pathname, Astro.site));
   <meta name="keywords" content={ frontmatter.keywords }>
   <meta name="description" content={ frontmatter.description }>
   <meta name="theme-color" content={ SITE.themeColor } />
-  <link rel="stylesheet" href="/css/vars.css" />
-  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href={ SITE.subfolder + 'css/vars.css' } />
+  <link rel="stylesheet" href={ SITE.subfolder + 'css/main.css' } />
   <link rel="canonical" href={ canonicalURL } />
   <link rel="alternate" type="application/atom+xml" title={ SITE.title } href={ SITE.feedUrl } />
-  <link rel="alternate" href="/sitemap.xml" type="application/rss+xml" />
-  <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
+  <link rel="alternate" href={ SITE.subfolder + 'sitemap.xml' } type="application/rss+xml" />
+  <link rel="shortcut icon" href={ SITE.subfolder + 'icons/favicon.ico' } type="image/x-icon" />
+  <link rel="apple-touch-icon" href={ SITE.subfolder + 'icons/apple-touch-icon.png' } />
   <meta property="og:type" content="website" />
   <meta property="og:url" content={ canonicalURL } />
   <meta property="og:title" content={ frontmatter.title } />
