--- a/src/layouts/Example.astro
+++ b/src/layouts/Example.astro
@@ -45,6 +45,6 @@ const textDirection = frontmatter.dir ?? SITE.default.dir;
         </div>
         <Breadcrumbs frontmatter={ frontmatter } headings={ headings } lang={ lang } />
         <Footer frontmatter={ frontmatter } headings={ headings } lang={ lang } />
-        <script src="/js/main.js" type="module" async></script>
+        <script src={ SITE.subfolder + '/js/main.js' } type="module" async></script>
     </body>
 </html>
