--- a/src/utilities/Navigation.astro
+++ b/src/utilities/Navigation.astro
@@ -45,7 +45,10 @@ export async function getNavigation (currentUrl: URL) {
         const topLevelPages = await getTopLevelPages(showInMenu);
         const allPages = await getPages(showInMenu);
 
-        pageHierarchy = topLevelPages.map(mapNavPage);
+        pageHierarchy = topLevelPages
+            .map(mapNavPage)
+            .sort((a, b) => a.order - b.order);
+            
         const pageList: NavPage[] = allPages.map(mapNavPage);
 
         for (let i = 0; i < pageHierarchy.length; i++) {
