--- a/src/themes/accelerator/components/HtmlHead.astro
+++ b/src/themes/accelerator/components/HtmlHead.astro
@@ -13,13 +13,14 @@ const { frontmatter } = Astro.props;
 // Logic
 const imageSrc = frontmatter.bannerImage?.src ?? OPEN_GRAPH.image.src;
 const imageAlt = frontmatter.bannerImage?.alt ?? OPEN_GRAPH.image.alt;
+const robots = frontmatter.robots ?? 'index, follow';
 const canonicalImageSrc = new URL(imageSrc, Astro.site);
 const canonicalURL =  addSlashToUrl(new URL(Astro.url.pathname, Astro.site + SITE.subfolder));
 ---
 <head>
   <meta charset="utf-8" />
   <title>{ frontmatter.title ? `${ frontmatter.title } | ${ SITE.title }` : SITE.title }</title>
-  <meta name="robots" content="max-image-preview:large">
+  <meta name="robots" content={ 'max-image-preview:large, ' + robots }>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content={ frontmatter.keywords }>
   <meta name="description" content={ frontmatter.description }>
