--- a/src/utilities/NavigationTypes.astro
+++ b/src/utilities/NavigationTypes.astro
@@ -9,8 +9,8 @@ export type NavPage = {
   children: NavPage[];
 }
 
-export function isNavPage (item: NavPage | 'auto' | 'tags' | 'categories') : item is NavPage {
-  if (typeof item === 'string' && ['auto', 'tags', 'categories'].includes(item)) {
+export function isNavPage (item: NavPage | 'auto' | 'tags' | 'toptags' | 'categories') : item is NavPage {
+  if (typeof item === 'string' && ['auto', 'tags', 'toptags', 'categories'].includes(item)) {
     return false;
   }
 
