Experimental grid layout test

--- a/src/themes/accelerator/layouts/Default.astro
+++ b/src/themes/accelerator/layouts/Default.astro
@@ -32,26 +32,26 @@ const site_features = ${JSON.stringify(SITE.featureFlags)};
         <SkipLinks frontmatter={ frontmatter } headings={ headings } lang={ lang } />
         <Header frontmatter={ frontmatter } headings={ headings } lang={ lang } />
         <Breadcrumbs frontmatter={ frontmatter } headings={ headings } lang={ lang } />
-        <div class="content-group">
-            <Navigation lang={ lang } />
-            <main id="site-main">
-                <article itemscope itemtype="https://schema.org/Article">
+        <main id="site-main">
+            <article class="article-grid" itemscope itemtype="https://schema.org/Article">
+                <header>
+                    <h1 itemprop="name headline">{ frontmatter.title ?? SITE.title }</h1>
+                    {frontmatter.subtitle && (
+                        <p>{ frontmatter.subtitle }</p>
+                    )}
+                </header>
+                <div>
                     <TableOfContents frontmatter={ frontmatter } headings={ headings } lang={ lang } />
-                    <header>
-                        <h1 itemprop="name headline">{ frontmatter.title ?? SITE.title }</h1>
-                        {frontmatter.subtitle && (
-                            <p>{ frontmatter.subtitle }</p>
-                        )}
-                    </header>
                     <Authors frontmatter={ frontmatter } lang={ lang } />
                     <div class="page-content anim-show-parent" itemprop="articleBody">
                         <slot />
                     </div>
                     <Taxonomy frontmatter={ frontmatter } lang={ lang } />
                     <Related frontmatter={ frontmatter } headings={ headings } lang={ lang } />
-                </article>
-            </main>
-        </div>
+                </div>
+                <Navigation lang={ lang } />
+            </article>
+        </main>
         <Footer frontmatter={ frontmatter } headings={ headings } lang={ lang } />
         <Fragment is:html="true" set:html={ features } />
         <script src={ SITE.subfolder + '/js/main.js' } type="module" async></script>
