--- a/public/css/main.css
+++ b/public/css/main.css
@@ -156,7 +156,7 @@ li::marker {
     color: var(--fore-headings);
 }
 
-main ul, main ol {
+.page-content ul, .page-content ol {
     margin: var(--paragraph-margin) 0 var(--paragraph-margin) 1.2rem;
 }
 
@@ -428,7 +428,55 @@ nav.site-nav h2 {
 
 /* Main content group */
 
-.content-group {
+.article-grid {
+    display: grid; 
+    grid-template-columns: var(--navigation-width) auto; 
+    grid-template-rows: auto 1fr; 
+    gap: var(--grid-gap);
+    grid-template-areas: 
+      "top top"
+      "menu content";
+    max-width: var(--grid-max-width);
+    justify-items: center;
+    margin: 0 auto;
+}
+
+.article-grid > header {
+    grid-area: top;
+    text-align: center;
+    padding-bottom: var(--block-gap);
+}
+
+.article-grid > header p {
+    width: 60%;
+    margin: 0 auto;
+    font-size: 2em;
+    color: var(--fore-headings);
+}
+
+.article-grid > div {
+    grid-area: content;
+    max-width: calc(var(--grid-max-width) - var(--grid-gap) - var(--navigation-width));
+}
+
+.article-grid > nav {
+    grid-area: menu;
+    width: 100%;
+}
+
+@media (max-width: 860px) {
+    .article-grid {
+        grid-template-columns: auto; 
+        grid-template-rows: repeat(auto); 
+        gap: var(--grid-gap);
+        grid-template-areas: 
+          "top"
+          "content"
+          "menu";
+    }
+  }
+
+/* .content-group {
     display: grid;
     grid-template-columns: var(--navigation-width) auto;
     gap: var(--grid-gap);
@@ -444,7 +492,6 @@ nav.site-nav h2 {
 }
 
 @media (max-width: 860px) {
-  /* Content First on Small Screens */
   .content-group {
       grid-template-columns: auto;
       grid-template-rows: 1fr auto;
@@ -465,7 +512,6 @@ main ul ol, main ul ul, main ol ol, main ol ul {
 }
 
 @media (max-width: 860px) {
-    /* Content First on Small Screens */
     main {
         grid-row: 1;
     }
@@ -474,7 +520,7 @@ main ul ol, main ul ul, main ol ol, main ol ul {
         max-width: unset;
         width: var(--grid-width);
     }
-  }
+  } */
 
 /* Table of Contents (TOC) */
 
