--- a/src/themes/accelerator/layouts/Default.astro
+++ b/src/themes/accelerator/layouts/Default.astro
@@ -1,5 +1,6 @@
 ---
 import { SITE, Frontmatter } from '@config';
+import { getInlineHtmlFrom } from '@util/Markdown.astro';
 
 import Head from '@components/HtmlHead.astro';
 import Header from '@components/Header.astro';
@@ -21,6 +22,11 @@ const { frontmatter, headings } = Astro.props as Props;
 const lang = frontmatter.lang ?? SITE.default.lang;
 const textDirection = frontmatter.dir ?? SITE.default.dir;
 
+const title = await getInlineHtmlFrom(frontmatter.title ?? SITE.title);
+const subtitle = frontmatter.subtitle
+    ? await getInlineHtmlFrom(frontmatter.subtitle)
+    : null;
+
 const features = `<script>
 const site_url = '${SITE.url}';
 const site_features = ${JSON.stringify(SITE.featureFlags)};
@@ -35,9 +41,9 @@ const site_features = ${JSON.stringify(SITE.featureFlags)};
         <main id="site-main">
             <article class="article-grid" itemscope itemtype="https://schema.org/Article">
                 <header>
-                    <h1 itemprop="name headline">{ frontmatter.title ?? SITE.title }</h1>
-                    {frontmatter.subtitle && (
-                        <p>{ frontmatter.subtitle }</p>
+                    <h1 itemprop="name headline"><Fragment set:html={ title } /></h1>
+                    {subtitle && (
+                        <p><Fragment set:html={ subtitle } /></p>
                     )}
                 </header>
                 <div>
