--- a/public/css/main.css
+++ b/public/css/main.css
@@ -428,7 +428,7 @@ nav.site-nav h2 {
 
 /* Main content group */
 
-.article-grid {
+.content-group {
     display: grid; 
     grid-template-columns: var(--navigation-width) auto; 
     grid-template-rows: auto 1fr; 
@@ -441,31 +441,37 @@ nav.site-nav h2 {
     margin: 0 auto;
 }
 
-.article-grid > header {
+.content-group header {
     grid-area: top;
     text-align: center;
     padding-bottom: var(--block-gap);
 }
 
-.article-grid > header p {
+.content-group header p {
     width: 60%;
     margin: 0 auto;
     font-size: 2em;
     color: var(--fore-headings);
 }
 
-.article-grid > div {
-    grid-area: content;
-    max-width: calc(var(--grid-max-width) - var(--grid-gap) - var(--navigation-width));
-}
-
-.article-grid > nav {
+.content-group nav {
     grid-area: menu;
     width: 100%;
 }
 
+.content-group main,
+.content-group article {
+    display: contents;
+}
+
+.content-group article > .page-content {
+    grid-area: content;
+    margin: 0;
+    max-width: calc(var(--grid-max-width) - var(--grid-gap) - var(--navigation-width));
+}
+
 @media (max-width: 860px) {
-    .article-grid {
+    .content-group {
         grid-template-columns: auto; 
         grid-template-rows: repeat(auto); 
         gap: var(--grid-gap);
@@ -474,53 +480,7 @@ nav.site-nav h2 {
           "content"
           "menu";
     }
-  }
-
-/* .content-group {
-    display: grid;
-    grid-template-columns: var(--navigation-width) auto;
-    gap: var(--grid-gap);
-    max-width: var(--grid-max-width);
-    width: var(--grid-width);
-    margin: var(--block-gap) auto var(--block-gap) auto;
-    min-height: calc(100vh - 280px);
 }
-
-.content-single {
-    margin: 1rem auto;
-    max-width: var(--grid-max-width);
-}
-
-@media (max-width: 860px) {
-  .content-group {
-      grid-template-columns: auto;
-      grid-template-rows: 1fr auto;
-  }
-}
-
-main {
-    max-width: calc(var(--grid-max-width) - var(--navigation-width) - var(--grid-gap));
-    width: calc(var(--grid-width) - var(--navigation-width) - var(--grid-gap));
-}
-
-main h1 {
-    margin-top: 0.1em;
-}
-
-main ul ol, main ul ul, main ol ol, main ol ul {
-    margin: 0 0 0 1.2rem;
-}
-
-@media (max-width: 860px) {
-    main {
-        grid-row: 1;
-    }
-  
-    main {
-        max-width: unset;
-        width: var(--grid-width);
-    }
-  } */
 
 /* Table of Contents (TOC) */
 
