--- a/public/css/main.css
+++ b/public/css/main.css
@@ -605,6 +605,7 @@ form.site-search button {
 
 .site-search-results {
     font-size: 1.3rem;
+    padding-bottom: 3rem;
 }
 
 .site-search-results a {
