--- a/src/pages/tag/[tag]/[page].astro
+++ b/src/pages/tag/[tag]/[page].astro
@@ -91,7 +91,7 @@ export async function getStaticPaths({ paginate }: any) {
       props: { title: t, pubDate: filtered[0].frontmatter.pubDate },
       pageSize: SITE.pageSize 
     });
-  });
+  }).flat();
 }
 
 // Page Links
