Redirects for missing page folder

--- a/src/pages/articles/[page].astro
+++ b/src/pages/articles/[page].astro
@@ -1,4 +1,6 @@
 ---
+// warning: This file is overwritten by Astro Accelerator
+
 // For listing all articles in this folder
 import t from '@util/language.json';
 import { Lang } from '@util/Languages.astro';
