--- a/src/pages/tag/[tag]/[page].astro
+++ b/src/pages/tag/[tag]/[page].astro
@@ -1,4 +1,6 @@
 ---
+// warning: This file is overwritten by Astro Accelerator
+
 // For listing by frontmatter.tags
 import t from '@util/language.json';
 import { Lang } from '@util/Languages.astro';
