--- a/src/pages/authors/[author]/[page].astro
+++ b/src/pages/authors/[author]/[page].astro
@@ -4,9 +4,9 @@
 // For listing all articles in this folder
 import { Translations, Lang } from '@util/Languages';
 import type { Page, MarkdownInstance } from 'astro';
-import { Frontmatter, SITE } from '@config';
+import { SITE, Frontmatter } from '@config';
 import { getPageLinks } from '@util/PageLinks';
-import { isListable, sortByPubDateDesc } from '@util/PageTypeFilters';
+import { isListable, sortByPubDateDesc } from 'astro-accelerator-utils';
 import { getItem, setItem } from '@util/Cache';
 import { getAuthorInfo } from '@util/PageQueries';
 import Default from '@layouts/Default.astro';
