--- a/src/pages/report/oldest-content.astro
+++ b/src/pages/report/oldest-content.astro
@@ -1,5 +1,5 @@
 ---
-import { sortByModDate } from '@util/PageTypeFilters';
+import { sortByModDate } from 'astro-accelerator-utils';
 import { getPages } from '@util/PageQueries';
 
 // Logic
