--- a/src/pages/report/missing-meta.astro
+++ b/src/pages/report/missing-meta.astro
@@ -1,5 +1,5 @@
 ---
-import { sortByPubDateDesc } from '@util/PageTypeFilters';
+import { sortByPubDateDesc } from 'astro-accelerator-utils';
 import { getPages } from '@util/PageQueries';
 
 // Logic
