--- a/src/themes/accelerator/components/ArticleList.astro
+++ b/src/themes/accelerator/components/ArticleList.astro
@@ -1,7 +1,7 @@
 ---
 import type { MarkdownInstance } from 'astro';
 import { SITE, Frontmatter } from '@config';
-import { addSlashToAddress } from '@util/Url';
+import { addSlashToAddress } from 'astro-accelerator-utils';
 import { getImageInfo } from '@util/custom-markdown.mjs';
 import AuthorsMini from '@components/AuthorsMini.astro';
 
@@ -34,7 +34,7 @@ function getLoadingAttribute() {
 ---
 <ul class="post-list anim-show-parent">
   {articles.map((post) => (
-  <li class="list-item" data-destination={ addSlashToAddress(post.url) } data-image={ (post.frontmatter.bannerImage?.src.length > 0).toString() }>
+  <li class="list-item" data-destination={ addSlashToAddress(post.url, SITE) } data-image={ (post.frontmatter.bannerImage?.src.length > 0).toString() }>
     <article>
       <div class="list-item-image">
       {post.img && (
@@ -49,7 +49,7 @@ function getLoadingAttribute() {
       </div>
       <div class="list-item-content">
         <h3>
-          <a href={ addSlashToAddress(post.url) }>{ post.frontmatter.title }</a>
+          <a href={ addSlashToAddress(post.url, SITE) }>{ post.frontmatter.title }</a>
         </h3>
         <AuthorsMini lang={ lang } frontmatter={ post.frontmatter as Frontmatter } />
       </div>
