--- a/src/themes/accelerator/components/Header.astro
+++ b/src/themes/accelerator/components/Header.astro
@@ -2,8 +2,7 @@
 import { SITE, Frontmatter } from '@config';
 import { Translations, Lang } from '@util/Languages';
 import { getPages } from '@util/PageQueries';
-import { addSlashToAddress } from '@util/Url';
-import { isSearch } from '@util/PageTypeFilters';
+import { addSlashToAddress, isSearch } from 'astro-accelerator-utils';
 
 // Properties
 type Props = {
@@ -31,7 +30,7 @@ const search = (await getPages(isSearch))[0] ?? null;
   </svg></a>
   <a href={ (SITE.subfolder ?? '') + '/' } class="site-title" translate="no">{ SITE.title }</a>
   {search != null &&
-  <a href={ addSlashToAddress(search.url) } class="search-icon" title={ _(Translations.header.open_search) }><svg xmlns="http://www.w3.org/2000/svg" 
+  <a href={ addSlashToAddress(search.url, SITE) } class="search-icon" title={ _(Translations.header.open_search) }><svg xmlns="http://www.w3.org/2000/svg" 
     width="40" height="40" viewBox="0 0 24 24" stroke-width="1" 
     fill="none" stroke-linecap="round" stroke-linejoin="round">
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
