--- a/src/themes/accelerator/components/Related.astro
+++ b/src/themes/accelerator/components/Related.astro
@@ -1,14 +1,11 @@
 ---
-import type { Frontmatter } from '@config';
+import { SITE, Frontmatter } from '@config';
 import type { MarkdownInstance } from 'astro';
-import { addSlashToAddress } from '@util/Url';
+import { addSlashToAddress, isListable, sortByPubDateDesc } from 'astro-accelerator-utils';
 import { getImageInfo } from '@util/custom-markdown.mjs'
 import { getPages } from '@util/PageQueries';
-import { isListable, sortByPubDateDesc } from '@util/PageTypeFilters';
 
 import AuthorsMini from '@components/AuthorsMini.astro';
-
-import { SITE } from '@config';
 
 // Properties
 type Props = {
@@ -56,7 +53,7 @@ const articles = posts.map(p => {
 {articles.length > 0 &&
 <ul class="post-list anim-show-parent">
   {articles.map((post) => (
-  <li class="list-item" data-destination={ addSlashToAddress(post.url) } data-image={ (post.frontmatter.bannerImage?.src.length > 0).toString() }>
+  <li class="list-item" data-destination={ addSlashToAddress(post.url, SITE) } data-image={ (post.frontmatter.bannerImage?.src.length > 0).toString() }>
     <article>
       <div class="list-item-image">
       {post.img && (
@@ -71,7 +68,7 @@ const articles = posts.map(p => {
       </div>
       <div class="list-item-content">
         <h3>
-          <a href={ addSlashToAddress(post.url) }>{ post.frontmatter.title }</a>
+          <a href={ addSlashToAddress(post.url, SITE) }>{ post.frontmatter.title }</a>
         </h3>
         <AuthorsMini lang={ lang } frontmatter={ post.frontmatter as Frontmatter } />
       </div>
